# codexia

./: .env.local.template  .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.agents/rules/: GEMINI.md
.agents/skills/: README.md  skill-rules.json
.agents/skills/flutter-architecture-guidelines/: SKILL.md
.agents/skills/flutter-debugging-guidelines/: SKILL.md
.agents/workflows/: README.md  settings.json
.codex/: README.md  settings.json
.codex/agents/: README.md  auth-route-tester.md  auto-error-resolver.md  code-architecture-reviewer.md  code-refactor-master.md  flutter-developer.md  refactor-planner.md
.codex/commands/: dev-docs-update.md  dev-docs.md  route-research-for-testing.md
.codex/skills/: README.md  skill-rules.json
app/: globals.css  layout.tsx  page.tsx
app/agent/: page-client.tsx  page.tsx
app/api/agent/: route.ts
app/signals/: page.tsx
components/: session-manager.tsx  theme-provider.tsx  theme-selector.tsx  top-menu-bar-host.tsx  top-menu-bar.tsx
config/: telegram-response-style.txt
data/signals/: demo-snapshot.json
dev/: README.md
dev/process/: 20260417-013512.md  20260419-034407-telegram-404.md
docs/: ARCHITECTURE.md  PRD.md  TASK.md  TASK.mvp.backup.md  ai_signal_dashboard_plan.docx  architectur.md  e2e-report.md  signalforge-runtime.md  signalforge.md
lib/theme/: themes.ts
services/ai-signal-pipeline/: pyproject.toml
services/ai-signal-pipeline/src/ai_signal_pipeline/: __init__.py  cli.py  db.py  writer.py
src/infrastructure/: atomic-file.ts
(+182 files in other folders)
