[project]
name = "ai-signal-pipeline"
version = "0.1.0"
description = "SignalForge Python pipeline bootstrap"
requires-python = ">=3.10"
dependencies = [
  "psycopg[binary]>=3.2.0",
]

[project.scripts]
signal-pipeline = "ai_signal_pipeline.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
